@@ -264,9 +264,9 @@ bool Log::load(const QString &name,QString *err_msg)
     return false;
   }
   log_name=name;
-  log_service_name=loghdr->log_service;
-  log_description=loghdr->log_description;
-  log_origin_username=loghdr->log_origin_username;
+  log_service_name=QString::fromUtf8(loghdr->log_service);
+  log_description=QString::fromUtf8(loghdr->log_description);
+  log_origin_username=QString::fromUtf8(loghdr->log_origin_username);
   log_origin_date_time=DateTime::fromTm(loghdr->log_origin_datetime);
   log_link_date_time=DateTime::fromTm(loghdr->log_link_datetime);
   log_modified_date_time=DateTime::fromTm(loghdr->log_modified_datetime);
@@ -300,19 +300,19 @@ bool Log::load(const QString &name,QString *err_msg)
     back().setCartType((LogLine::CartType)ll[i].logline_cart_type);
     back().setCartNumber(ll[i].logline_cart_number);
     back().setCutNumber(ll[i].logline_cut_number);
-    back().setGroupName(ll[i].logline_group_name);
+    back().setGroupName(QString::fromUtf8(ll[i].logline_group_name));
     back().setGroupColor(ll[i].logline_group_color);
-    back().setTitle(ll[i].logline_title);
-    back().setArtist(ll[i].logline_artist);
-    back().setAlbum(ll[i].logline_album);
+    back().setTitle(QString::fromUtf8(ll[i].logline_title));
+    back().setArtist(QString::fromUtf8(ll[i].logline_artist));
+    back().setAlbum(QString::fromUtf8(ll[i].logline_album));
     back().setYear(ll[i].logline_year);
-    back().setLabel(ll[i].logline_label);
-    back().setClient(ll[i].logline_client);
-    back().setAgency(ll[i].logline_agency);
-    back().setPublisher(ll[i].logline_publisher);
-    back().setComposer(ll[i].logline_composer);
-    back().setConductor(ll[i].logline_conductor);
-    back().setUserDefined(ll[i].logline_user_defined);
+    back().setLabel(QString::fromUtf8(ll[i].logline_label));
+    back().setClient(QString::fromUtf8(ll[i].logline_client));
+    back().setAgency(QString::fromUtf8(ll[i].logline_agency));
+    back().setPublisher(QString::fromUtf8(ll[i].logline_publisher));
+    back().setComposer(QString::fromUtf8(ll[i].logline_composer));
+    back().setConductor(QString::fromUtf8(ll[i].logline_conductor));
+    back().setUserDefined(QString::fromUtf8(ll[i].logline_user_defined));
     back().setUsageCode((LogLine::UsageCode)ll[i].logline_usage_code);
     back().setEnforceLength(ll[i].logline_enforce_length);
     back().setForcedLength(ll[i].logline_forced_length);
@@ -323,9 +323,9 @@ bool Log::load(const QString &name,QString *err_msg)
     back().setTransType((LogLine::TransType)ll[i].logline_transition_type);
     back().setCutQuantity(ll[i].logline_cut_quantity);
     back().setLastCutPlayed(ll[i].logline_last_cut_played);
-    back().setMarkerComment(ll[i].logline_marker_comment);
-    back().setMarkerLabel(ll[i].logline_marker_label);
-    back().setOriginUser(ll[i].logline_origin_user);
+    back().setMarkerComment(QString::fromUtf8(ll[i].logline_marker_comment));
+    back().setMarkerLabel(QString::fromUtf8(ll[i].logline_marker_label));
+    back().setOriginUser(QString::fromUtf8(ll[i].logline_origin_user));
     back().setOriginDateTime(DateTime::fromTm(ll[i].logline_origin_datetime));
     back().setStartPoint(LogLine::CartPointer,ll[i].logline_start_point_cart);
     back().setStartPoint(LogLine::LogPointer,ll[i].logline_start_point_log);
@@ -361,10 +361,10 @@ bool Log::load(const QString &name,QString *err_msg)
     back().setLinkEmbedded(ll[i].logline_link_embedded);
     back().setExtStartTime(QTime().addMSecs(ll[i].logline_ext_starttime));
     back().setExtLength(ll[i].logline_ext_length);
-    back().setExtCartName(ll[i].logline_ext_cart_name);
-    back().setExtData(ll[i].logline_ext_data);
-    back().setExtEventId(ll[i].logline_ext_event_id);
-    back().setExtAnncType(ll[i].logline_ext_annc_type);
+    back().setExtCartName(QString::fromUtf8(ll[i].logline_ext_cart_name));
+    back().setExtData(QString::fromUtf8(ll[i].logline_ext_data));
+    back().setExtEventId(QString::fromUtf8(ll[i].logline_ext_event_id));
+    back().setExtAnncType(QString::fromUtf8(ll[i].logline_ext_annc_type));
   }
   ::free(ll);
   *err_msg="OK";
